--- a/dev/accordion-widget/accordion-styles.css
+++ b/dev/accordion-widget/accordion-styles.css
@@ -20,7 +20,7 @@
 .accordion-header {
   border: 1px solid #ddd;
   border-radius: 4px;
-  color: #531111 !important;
+  color: #bd472a !important;
   font-size: 1rem;
   font-weight: normal !important;
   margin: 0;
