--- a/dev/quick-links/quick-link-styles.css
+++ b/dev/quick-links/quick-link-styles.css
@@ -35,6 +35,7 @@
 
 .quick-link-content {
   background-color: rgba(0, 0, 0, 0.75);
+  color: #fff;
   height: 150px;
   position: absolute;
   top: 100px;
