--- a/dev/styles.css
+++ b/dev/styles.css
@@ -7,7 +7,7 @@ a.button,
   background: #000;
   border: 0;
   border-radius: 4px; 
-  color: #fff;
+  color: #fff !important;
   display: inline-block;
   font-size: 1rem;
   margin: 0;
@@ -19,7 +19,7 @@ a.button,
 a.button:hover,
 .print-accordion:hover{
   background: #000;
-  color: #cfb87c;
+  color: #cfb87c !important;
   cursor: pointer;
   text-decoration: none;
 }
