--- a/dev/styles.css
+++ b/dev/styles.css
@@ -452,6 +452,10 @@ li.ms-navedit-editArea {
   justify-content: space-between;
 }
 
+.evenly {
+  justify-content: space-evenly;
+}
+
 .flex-column {
   flex-direction: column;
 }
