extra margin added above department contact

--- a/dev/service-list/service-list-styles.css
+++ b/dev/service-list/service-list-styles.css
@@ -9,6 +9,10 @@
   width: 45%;
 }
 
+#serviceListContainer>section>section {
+  margin-top: 2rem;
+}
+
 #serviceListContainer>section>section ul {
   list-style-type: none;
 }
