custom padding rules fixed to affect padding instead of margin

--- a/dev/styles.css
+++ b/dev/styles.css
@@ -830,35 +830,35 @@ div.cbq-layout-main li.dfwp-item div.bullet {
 }
 
 .padding-bottom-large {
-  margin-bottom: 5rem;
+  padding-bottom: 5rem;
 }
 
 .padding-bottom-medium {
-  margin-bottom: 3rem;
+  padding-bottom: 3rem;
 }
 
 .padding-bottom-small {
-  margin-bottom: 2rem;
+  padding-bottom: 2rem;
 }
 
 .padding-bottom-x-small {
-  margin-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 .padding-left-small {
-  margin-left: 2rem;
+  padding-left: 2rem;
 }
 
 .padding-left-x-small {
-  margin-left: 1rem;
+  padding-left: 1rem;
 }
 
 .padding-right-small {
-  margin-right: 2rem;
+  padding-right: 2rem;
 }
 
 .padding-right-x-small {
-  margin-right: 1rem;
+  padding-right: 1rem;
 }
 
 .padding-small {
@@ -866,34 +866,34 @@ div.cbq-layout-main li.dfwp-item div.bullet {
 }
 
 .padding-top-large {
-  margin-top: 5rem;
+  padding-top: 5rem;
 }
 
 .padding-top-medium {
-  margin-top: 3rem;
+  padding-top: 3rem;
 }
 
 .padding-top-small {
-  margin-top: 2rem;
+  padding-top: 2rem;
 }
 
 .padding-top-x-small {
-  margin-top: 1rem;
+  padding-top: 1rem;
 }
 
 .padding-vertical-large {
-  margin-bottom: 5rem;
-  margin-top: 5rem;
+  padding-bottom: 5rem;
+  padding-top: 5rem;
 }
 
 .padding-vertical-medium {
-  margin-bottom: 3rem;
-  margin-top: 3rem;
+  padding-bottom: 3rem;
+  padding-top: 3rem;
 }
 
 .padding-vertical-small {
-  margin-bottom: 2rem;
-  margin-top: 2rem;
+  padding-bottom: 2rem;
+  padding-top: 2rem;
 }
 
 .padding-x-small {
