result set filtered in service to only display data matching hr categories for hr page placement

--- a/dev/announcements/announce-styles.css
+++ b/dev/announcements/announce-styles.css
@@ -147,3 +147,7 @@
 #cardFilters li.certificate label:before {
   background-image: url('/PublishingImages/icons/certificate-blue.png');
 }
+
+#cardFilters li.newspaper label:before {
+  background-image: url('/PublishingImages/icons/newspaper-blue.png');
+}
